--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fellowship",
+  "name": "atom-fellowship",
   "main": "./lib/fellowship",
   "version": "0.2.0",
   "description": "Atom plugin for operating with group of related files as single file (opening, switchin, closing)",
