--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     ]
   },
   "repository": "https://github.com/dimanech/atom-fellowship",
-  "license": "./LICENSE.md",
+  "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 < 2.0.0"
   },
