--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "atom-fellowship",
   "main": "./lib/atom-fellowship",
   "version": "0.6.2",
-  "description": "Atom plugin for operating with group of related files as single file (opening, switchin, closing)",
+  "description": "Atom plugin for operating with group of related files as single file (opening, switchin, closing, creating)",
   "keywords": [
     "related",
     "related files",
@@ -13,7 +13,8 @@
   ],
   "activationCommands": {
     "atom-workspace": [
-      "atom-fellowship:openFellows"
+      "atom-fellowship:openFellows",
+	    "atom-fellowship:createFellows"
     ]
   },
   "repository": "https://github.com/dimanech/atom-fellowship",
